knowhere-cft.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: Knowhere EC2 Stack CFT

Parameters:
  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/canonical/ubuntu/server/jammy/stable/current/amd64/hvm/ebs-gp2/ami-id'
  S3BucketPath:
    Type: 'AWS::SSM::Parameter::Value<String>'
    Default: '/gamehost/s3bucket/path'
  S3BucketArn:
    Type: 'AWS::SSM::Parameter::Value<String>'
    Default: '/gamehost/s3bucket/arn'
  SSMPolicyArn:
    Type: 'AWS::SSM::Parameter::Value<String>'
    Default: '/managedPolicyArns/ssmEC2Role'
  EC2RoleArn:
    Type: 'AWS::SSM::Parameter::Value<String>'
    Default: '/managedPolicyArns/knowhereEC2Role'
  Branch:
    Type: String
    Default: develop
Resources:
  knowhereInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
        - !Ref EC2RoleArn
  
  knowhereSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupName: "Knowhere EC2 Access"
            GroupDescription: "Allows specific traffic in/out for SSH and game servers"
            SecurityGroupIngress:
              - IpProtocol: udp
                FromPort: 27015
                ToPort: 27015
                CidrIp: 0.0.0.0/0
                Description: Steam
              - IpProtocol: tcp
                FromPort: 25565
                ToPort: 25565
                CidrIp: 0.0.0.0/0
                Description: Minecraft
              - IpProtocol: udp
                FromPort: 8211
                ToPort: 8211
                CidrIp: 0.0.0.0/0
                Description: Palworld
              - IpProtocol: tcp
                FromPort: 1985
                ToPort: 1985
                CidrIp: 0.0.0.0/0
                Description: Palworld2
  
  knowhereEc2Instance:
    Type: AWS::EC2::Instance
    Properties:
      IamInstanceProfile: !Ref knowhereInstanceProfile
      SecurityGroups:
        - !Ref knowhereSecurityGroup
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash -xe
            branch=${Branch}
            wget https://raw.githubusercontent.com/Bradfordly/bradfordly-gamehost/${Branch}/knowhere/knowhere-userdata.sh
            mv knowhere-userdata.sh /opt/knowhere/knowhere-userdata.sh
            chmod +x /opt/knowhere/knowhere-userdata.sh
            bash . /opt/knowhere/knowhere-userdata.sh
      InstanceType: m5.large
      ImageId: !Ref LatestAmiId
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeType: gp2
            VolumeSize: '30'
            DeleteOnTermination: 'true'
            Encrypted: 'true'
      Tags:
        - Key: Name
          Value: !Sub "knowhere-${Environment}"
